Fix empty `<dd/>` elements, preserving whitespace

--- a/src/pydap/wsgi/templates/static/style.css
+++ b/src/pydap/wsgi/templates/static/style.css
@@ -88,8 +88,21 @@ dd {
     margin: -1.65em 0 0 10em;
 }
 
+dd.value {
+    white-space: pre;
+}
+
 div.form {
     padding: 1.0em;
+}
+
+div.nested {
+    margin-left: -8em;
+    clear: left;
+}
+
+fieldset {
+    clear: left;
 }
 
 .pure-button-submit {
@@ -100,13 +113,4 @@ div.form {
 
 .pure-button-submit {
     background: rgb(28, 184, 65); /* this is a green */
-}
-
-div.nested {
-    margin-left: -8em;
-    clear: left;
-}
-
-fieldset {
-    clear: left;
 }
